# shp2mysql

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  config.h  config.h.in  configure.ac  postgis_config.h  postgis_svn_revision.h
.github/workflows/: Package.yml  RPM.yml  Release.yml  ccpp.yml  main.yml  windows-mingw.yml
liblwgeom/: Makefile.am  Makefile.in  liblwgeom.h  liblwgeom_internal.h  lwalgorithm.c  lwgeodetic.c  lwgeodetic_tree.c  lwgeom.c  lwstroke.c  measures.c
src/: Makefile.am  Makefile.in  shp2mysql-cli.c  shp2mysql-core.c  shp2mysql-core.h
