noinst_LTLIBRARIES=liblwgeom.la
liblwgeom_la_SOURCES= \
	stringbuffer.c \
	bytebuffer.c \
	measures.c \
	measures3d.c \
	ptarray.c \
	lwgeom_api.c \
	lwgeom.c \
	lwpoint.c \
	lwline.c \
	lwpoly.c \
	lwtriangle.c \
	lwmpoint.c \
	lwmline.c \
	lwmpoly.c \
	lwboundingcircle.c \
	lwcollection.c \
	lwcircstring.c \
	lwcompound.c \
	lwcurvepoly.c \
	lwmcurve.c \
	lwmsurface.c \
	lwpsurface.c \
	lwtin.c \
	lwout_wkb.c \
	lwin_geojson.c \
	lwin_wkb.c \
	lwin_twkb.c \
	lwiterator.c \
	lwgeom_median.c \
	lwout_wkt.c \
	lwout_twkb.c \
	lwin_wkt_parse.c \
	lwin_wkt_lex.c \
	lwin_wkt.c \
	lwin_encoded_polyline.c \
	lwutil.c \
	lwhomogenize.c \
	lwalgorithm.c \
	lwstroke.c \
	lwlinearreferencing.c \
	lwprint.c \
	g_box.c \
	g_serialized.c \
	g_util.c \
	lwgeodetic.c \
	lwgeodetic_tree.c \
	lwtree.c \
	lwout_gml.c \
	lwout_kml.c \
	lwout_geojson.c \
	lwout_svg.c \
	lwout_x3d.c \
	lwout_encoded_polyline.c \
	lwgeom_debug.c \
	lwgeom_geos.c \
	lwgeom_geos_clean.c \
	lwgeom_geos_cluster.c \
	lwgeom_geos_node.c \
	lwgeom_geos_split.c \
	lwgeom_topo.c \
	lwgeom_wrapx.c \
	lwunionfind.c \
	effectivearea.c \
	lwchaikins.c \
	lwmval.c \
	lwkmeans.c \
	varint.c

noinst_HEADERS=bytebuffer.h \
	effectivearea.h \
	liblwgeom.h \
	liblwgeom_internal.h \
	lwgeodetic.h \
	lwgeodetic_tree.h \
	liblwgeom_topo.h \
	liblwgeom_topo_internal.h \
	lwgeom_log.h \
	lwgeom_geos.h \
	lwgeom_log.h \
	lwgeom_sfcgal.h \
	lwinline.h \
	lwin_wkt.h \
	lwin_wkt_parse.h \
	lwout_twkb.h \
	lwrandom.h \
	lwtree.h \
	measures3d.h \
	measures.h \
	stringbuffer.h \
	varint.h

CPPFLAGS= \
    -std=c99 \
	-std=gnu99 \
	-std=c11 \
	-std=gnu11
