bin_PROGRAMS=shp2mysql
shp2mysql_SOURCES=dbfopen.c \
                  getopt.c \
                  safileio.c \
                  shp2mysql-cli.c \
                  shp2mysql-core.c \
                  shpcommon.c \
                  shpopen.c
noinst_HEADERS=getopt.h \
               shapefil.h \
               shp2mysql-core.h \
               shpcommon.h
shp2mysql_LDADD=../liblwgeom/liblwgeom.la
